fix overflow issue in header and center charts on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,8 +3,10 @@
 }
 
 body {
-  margin: 0;
-  padding: 0;
+  width:100%;
+  margin:0;
+  padding:0;
+  overflow-x:hidden;
   font-family: 'Lato', sans-serif;
 }
 
@@ -21,20 +23,13 @@ body {
 
 .grid-container {
   display: grid;
+  min-width: 380px;
   grid-template-columns: 100%;
   grid-template-rows: auto;
   grid-template-areas:
   'header'
   'nav'
   'main';
-}
-
-.header {
-  grid-area: header;
-
-  color: #fff;
-  width: 100%;
-  background-color: rgb(96, 97, 177);
 }
 
 .main {
@@ -46,6 +41,7 @@ body {
 
 .widget-container-full, .widget-container-half {
   width: 95vw;
+  margin: 0 auto;
 }
 
 /***************************
@@ -56,7 +52,7 @@ body {
   grid-area: header;
   color: #fff;
   background-color: rgb(96, 97, 177);
-
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -207,7 +203,7 @@ body {
   font-size: 22px;
   font-weight: 400;
   text-align: left;
-  padding-left: 15px;
+  padding: 15px;
 }
 
 .main-header-search {
@@ -281,6 +277,10 @@ body {
 .traffic-header {
   display: flex;
   align-items: center;
+}
+
+#traffic-chartc{
+width: 100%;
 }
 
 .traffic-nav {
@@ -639,12 +639,13 @@ body {
   }
 
   .widget-container-full {
-    width: 90vw;
+    width: 95vw;
     margin: 0 auto;
   }
 
   .widget-container-half {
     width: 45vw;
+    margin: 0 auto;
   }
 
   .nav-list {
